# stash

./: .gitignore  LICENSE  Makefile  README.md
backend-service/: README.md  pyproject.toml
backend-service/stash_backend/: __init__.py  api.py  codex.py  config.py  db.py  direct_intent.py  embedding.py  indexer.py  integrations.py  main.py  orchestrator.py  permissions.py  planner.py  project_store.py  quick_actions.py  runtime_config.py  schemas.py  service_container.py  skills.py  types.py  utils.py  watcher.py
backend-service/tests/: test_codex_and_synthesis.py  test_direct_intent.py  test_orchestrator_latency.py  test_planner.py  test_quick_actions.py
docs/: DESKTOP_INSTALLER.md  FRONTEND_BACKEND_RUN.md
frontend-macos/: Package.swift  README.md
frontend-macos/Config/: Backend.xcconfig
frontend-macos/Sources/StashMacOSApp/: AppViewModel.swift  BackendClient.swift  FileScanner.swift  Models.swift  RootView.swift  StashMacOSApp.swift  Theme.swift  WorkspacePanels.swift
frontend-macos/Sources/StashMacOSAppExecutable/: main.swift
frontend-macos/Sources/StashOverlay/: BackendClient.swift  DragDrop.swift  OverlayView.swift  OverlayWindowController.swift  ProjectChatWindow.swift  ProjectPickerView.swift  ProjectWorkspaceWindow.swift  StashApp.swift  VisualEffectView.swift
frontend-macos/Sources/StashOverlay/Resources/Assets.xcassets/stashIcon.imageset/: Contents.json
frontend-macos/Tests/StashMacOSCoreTests/: WorkspaceCoreTests.swift
scripts/: install_stack.sh  run_backend.sh  run_stack.sh  smoke_test_backend.sh
scripts/desktop/: install_desktop_app.sh
