[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-backend"
version = "0.1.0"
description = "Local-first backend service for Stash"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "uv>=0.4.30",
  "pypdf>=4.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stash_backend*"]
